grid/03-grid-layout-3/style.css
* {
  margin: 0;
  padding: 0;
}

.container {
  text-align: center;
  display: grid;
  grid-template-columns: 1fr 3fr;
  grid-template-rows: 2fr 1fr 10fr 1fr;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
  display: grid;
  grid-template-columns: 1fr 3fr;
  align-items: center;
  grid-column: 1 / -1;
}

.logo {
  justify-self: left;
}

.nav {
  display: grid;
  align-items: center;
}

.menu ul {
 display: grid;
 grid-template-columns: repeat(4, 1fr);
}

.menu ul,
.menu li {
  font-size: 16px;
  list-style: none;
}

.sidebar {
  background-color: #FF7755;
  grid-row: 2 / -2;
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  gap: 20px;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #FF7755;
  grid-column: 2 / -1;
}

.nav ul {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.nav ul li {
  font-size: 16px;
  text-transform: uppercase;
  list-style: none;
}

.article {
  background-color: #bccbde;
  grid-column: 2 / -1;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
  gap: 15px;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
  grid-column: 1 / -1;
}

.footer p {
  font-size: 13px;
  font-weight: normal;  
}

